# zero2prod

./: .gitignore  BUG.md  Cargo.toml  DATABASE_SETUP.md  Dockerfile  LICENSE  README.md  spec.yaml  sqlx-data.json
configuration/: base.yaml  production.yaml
dockerfile_history/: os  tmp.txt  upgrade
migrations/: 20250325130911_create_subscriptions_table.sql  20250327153728_create_subscriptions_table.sql  20250417105816_add_status_to_subscriptions.sql  20250417110204_make_status_not_null_in_subscriptions.sql  20250608040221_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: greet.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
